Fix #6212 - spacing between circles inconsistent
 - increase margin-bottom.

--- a/dashboard/app/styles/viz.scss
+++ b/dashboard/app/styles/viz.scss
@@ -189,6 +189,7 @@ $switcher-bd-color: lighten($itgray, 10%);
 	display: inline-block;
 	border-radius: 100%;
 	border: 1px solid $itdarkgray;
+	margin-bottom: 3px;
 }
 .switcher-active {
 	background-color: $itlightgray;
